trying to bring image of team
